--- a/app/views/admins/_users.html.erb
+++ b/app/views/admins/_users.html.erb
@@ -23,5 +23,5 @@
 		<% end %>
 	</tbody>
 </table>
-<%= will_paginate @users %>
+<%= will_paginate @users, renderer: BootstrapPagination::Rails,class: "pull-right" %>
 </div>
