--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,14 +3,10 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <% if current_user.user_profile.avatar.exists? %>
-              <%= image_tag(current_user.user_profile.avatar.url(:medium), class: "img-circle") %>
-            <% else %> 
-              <%= image_tag(@avatarsrc, class: "img-circle", height: "80px", width: "80px") %>
-            <% end %>
+              <img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image" />
             </div>
             <div class="pull-left info">
-              <p><%= current_user.user_profile.first_name + " " + current_user.user_profile.last_name %></p>
+              <p>Alexander Pierce</p>
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
           </div>
@@ -25,9 +21,9 @@
             </li>
              
              <li class="treeview">
-              <%=link_to user_profile_path(current_user)  do %>
+              
               <i class="fa fa-user"></i> <span>Profile</span>
-               <% end %>
+               
             </li>
             
             <li class="treeview">
