--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>A</b>LT</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Admin</b>LTE</span>
+          <span class="logo-lg"><b>Pro</b>Attorney</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
@@ -204,17 +204,24 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                  <img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image" />
-                  <span class="hidden-xs">Alexander Pierce</span>
+                  <!--<img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image" />-->
+                    <img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image" />
+                                      
+
+                  <% if @user_profile!=nil %>
+                  <span class="hidden-xs">Name</span>
             &nbsp;&nbsp;
-                  <span class="hidden-xs"></span>
+                  <% else %>
+                
+                  <span class="hidden-xs">BoTree</span>
+                  <% end %>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
                     <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
                     <p>
-                      Alexander Pierce - Web Developer
+                      
                       <small>Member since Nov. 2012</small>
                     </p>
                   </li>
