--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,12 +1,16 @@
-e<aside class="main-sidebar">
+<aside class="main-sidebar">
 <section class="sidebar">
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
+              <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+      
             </div>
             <div class="pull-left info">
-              <p>Alexander Pierce</p>
+              <% if @user_profile!=nil%>
+              <% else %>
+                <p>Pro Attorney User</p>
+                <% end %>
             </div>
             <div class="pull-left info">
               <p></p>
@@ -31,25 +35,59 @@ e<aside class="main-sidebar">
                 <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
+
+          <% if current_user != nil %>
+            <% if current_user.is_advocate? %>
             <li class="treeview">
-              <a href="#">
-                <i class="fa fa-files-o"></i>
-                <span>Layout Options</span>
-                <span class="label label-primary pull-right">4</span>
-              </a>
+              <%= link_to cases_path do %>
+              <i class="fa fa-users"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+              <% end %>
+            </li>
 
              <li class="treeview">
-              
-              <i class="fa fa-user"></i> <span>Profile</span>
-               
+              <%= link_to user_profiles_path(current_user.id) do %>
+               <i class="fa fa-users"></i> <span>Profile</span> <i class="fa fa-angle-left pull-right"></i>
+              <% end %>
             </li>
+          
+
+           <li class="treeview">
+              <%= link_to 'Purchase' do %>
+               <i class="fa fa-users"></i> <span>Your Case</span> <i class="fa fa-angle-left pull-right"></i>
+              <% end %>
+            </li>
+            
+
+
+
+            <% elsif current_user.is_client? %>
             <li class="treeview">
+              <%= link_to cases_path do %>
+              <i class="fa fa-users"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+              <% end %>
+            </li>
+
+             <li class="treeview">
+              <%= link_to user_profiles_path(current_user.id) do %>
+               <i class="fa fa-users"></i> <span>Profile</span> <i class="fa fa-angle-left pull-right"></i>
+              <% end %>
+            </li>
+            
+            <% else %>
+              <li class="treeview">
               <a href="#">
-                <i class="fa fa-pie-chart"></i>
-                <span>Charts</span>
+                <i class="fa fa-pie-chart"></i> 
+                <span></span>
                 <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
+            
+
+            <% end %>
+
+            <% else %>
+            <p>Pro attoreny</p>
+            <%end %>
             
             <li class="treeview">
               <a href="#">
