--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @user_profile, role: "form", html: { :multipart => true } do |f| %>
+  <%=current_user.id%>
   <div class = "row">
     <div class = "col-md-6">
       <div class = "box box-primary"><!--start box 2 -->
