--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>User Profiles</h1>
-<%= link_to new_user_profile_path, class: "btn btn-primary" do %>
-	Register here
+<%= link_to cases_path, class: "btn btn-primary" do %>
+	View Cases
 <%end%>	
 <p>
 	<table class="table table-striped table-bordered table-hover">
@@ -11,8 +11,8 @@
 		<tr>
 			<td><%= up.first_name.titleize + " " + up.last_name.titleize %></td>
 			<td><%= link_to user_profile_path(up), class: "fa fa-fw fa-eye", title: "view" do %><% end %></td>
-			<td><%= link_to edit_user_profile_path(up), class: "fa fa-fw fa-pencil-square-o", title: "Edit" do %><% end %></td>
-			<td><%= link_to up, method: :delete, data: {confirm: 'are you sure? '}, class: "fa fa-fw fa-trash", title: "delete" do %><% end %></td>
+			<td><%= link_to edit_user_profile_path(up), class: "fa fa-fw fa-pencil-square-o", title: "Edit" do %><% end  if up.user.id==current_user.id %></td>
+			<td><%= link_to up, method: :delete, data: {confirm: 'are you sure? '}, class: "fa fa-fw fa-trash", title: "delete" do %><% end if up.user.id==current_user.id  %></td>
 		</tr>
 		<% end %>
 	</table>
