--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -49,7 +49,7 @@
 			&nbsp;&nbsp;
 			<%= link_to edit_user_profile_path(@user_profile), class: "btn btn-primary" do %>
 			<i class="fa fa-fw fa-edit"></i>
-			<%end%>
+			<% end if @user_profile.user.id==current_user.id %>
 			<br>
 		</div>
 	</div><!--end box 2 -->
