--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -1,4 +1,4 @@
-<% @cases.each do |user_case| %>
+<% @user_case.each do |user_case| %>
   <tr>
     <td><%= user_case.case_title %></td>
     <td><%= user_case.location%></td>
