--- a/app/views/admins/_users.html.erb
+++ b/app/views/admins/_users.html.erb
@@ -3,14 +3,14 @@
 	<thead>
 		<tr>
 		 	<th>No</th>
-		 	<th>Name</th>
-		 	<th class="sorting_asc">Email</th>
+		 	<th>Name<%=get_user_order("user_profiles.first_name",@users.first.role.title)%></th>
+		 	<th>Email <%=get_user_order("email",@users.first.role.title)%></th>
 		 	<th>Actions</th>
 	 	</tr>
 	</thead>
 	<tbody>
 		<% @users.each.with_index do |user,index|%>
-		  <tr>
+			<tr>
 				<td><%= index+1 %></td>
 				<td>
 				<%=link_to user_profile_path(user.user_profile) do%>
@@ -18,7 +18,7 @@
 				<%end %>
 				</td>
 				<td><%= user.email %></td>
-				<td><%= link_to active?(user), update_user_path(user),remote: true,method: :patch,title: "Activate/Deactivate this User" %></td>
+			    <td><%= active_user?(user)%></td>
 			</tr>
 		<% end %>
 	</tbody>
