--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -3,18 +3,18 @@
   <table class = "table table-bordered table-hover"> 
     <tr>
       <td>Case Title</td>
-      <td><%= @case.case_title %></td>
+      <td><%= @user_case.case_title %></td>
     </tr>
     <tr>
 	    <td>Detail</td> 
-      <td><%= @case.case_detail %></td>
+      <td><%= @user_case.case_detail %></td>
 	  </tr>
     <tr>
 	    <td>Location</td> 
-      <td><%= @case.location %></td>
+      <td><%= @user_case.location %></td>
 	  </tr>
     <tr>
-	    <td>status</td> <td><%= @case.status %></td>
+	    <td>status</td> <td><%= @user_case.status %></td>
     </tr>
     <tr>
  	    <td>Documents</td>
@@ -26,27 +26,27 @@
   <table class = "table table-bordered table-hover"> 
     <tr>
       <td>Name</td>
-      <td><%= @case.user.user_profile.first_name %> <%= @case.user.user_profile.last_name %></td>
+      <td><%= @user_case.user.user_profile.first_name %> <%= @user_case.user.user_profile.last_name %></td>
     </tr>
     <tr>
       <td>Gender</td>
-      <td><%= @case.user.user_profile.last_name %></td>
+      <td><%= @user_case.user.user_profile.last_name %></td>
     </tr>
     <tr>
       <td>Contact</td>
-      <td><%= @case.user.user_profile.mobile_no %></td>
+      <td><%= @user_case.user.user_profile.mobile_no %></td>
     </tr>
     <tr>
       <td>Address</td>
-      <td><%= @case.user.user_profile.address %></td>
+      <td><%= @user_case.user.user_profile.address %></td>
     </tr>
     <tr>
       <td>City</td>
-      <td><%= @case.user.user_profile.city %></td>
+      <td><%= @user_case.user.user_profile.city %></td>
     </tr>
     <tr>
       <td>Pincode</td>
-      <td><%= @case.user.user_profile.pincode %></td>
+      <td><%= @user_case.user.user_profile.pincode %></td>
     </tr>
   </table>  
   <%= link_to 'Back',:back, class: "btn btn-primary" %>
