--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -2,14 +2,15 @@
   <tr>
     <td><%= user_case.case_title %></td>
     <td><%= user_case.location%></td>
+    <td><%= user_case.case_type.amount %>$</td>
     <td><%= user_case.status%></td>
-    <td> <%= link_to "purchase",send_purchase_mail_path(case1.id),{:method => "post"} if current_user.is_advocate? %></td>
-    <% if current_user.is_client?%>
-    <td><%= link_to case_path(user_case) do%><%= image_tag "detail.png", size: "20x40" ,class: "some class here",alt: "show" %>
-    <% end %></td>
-    <td><%= link_to edit_case_path(user_case) do%><%= image_tag "edit.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
-    <td><%= link_to user_case, method: :delete, data: { confirm: 'Are you sure?' } do %><%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
-	<td><%= link_to "purchase" , case_cases_path(user_case)   %> </td>    
-
+    <% if current_user.id == user_case.user_id %>
+    <td><%= link_to "",case_path(user_case),class: "fa fa-fw fa-eye", title: "view" %>
+    </td>
+    <td><%= link_to "", edit_case_path(user_case) ,class: "fa fa-fw fa-pencil-square-o", title: "Edit" %></td>
+    <td><%= link_to "",user_case, method: :delete, data: { confirm: 'Are you sure?' },class: "fa fa-fw fa-trash", title: "delete" %></td>
+	<% end %>
+    <td><%= link_to "purchase" , case_cases_path(user_case) ,class:" btn btn-primary fa fa-cc-paypal" if current_user.is_advocate? %> </td>    
+    
     </tr>
 <% end %>
