--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <header class="main-header">
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="#" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>A</b>LT</span>
+          <span class="logo-mini"><b>P</b>AT</span>
           <!-- logo for regular state and mobile devices -->
           <span class="logo-lg"><b>Pro</b>Attorney</span>
         </a>
@@ -205,16 +205,8 @@
               <li class="dropdown user user-menu">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                   <!--<img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image" />-->
-                    <img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image" />
-                                      
-
-                  <% if @user_profile!=nil %>
-                  <span class="hidden-xs">Name</span>
-            &nbsp;&nbsp;
-                  <% else %>
-                
-                  <span class="hidden-xs">BoTree</span>
-                  <% end %>
+                    <%= avatar_display({class: "user-image"}) %>
+                    <span class="hidden-xs"><%=user_name %></span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
