--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,17 +3,14 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+              <%= avatar_display({class: "user-image"}) %>
             </div>
             <div class="pull-left info">
-              <% if @user_profile!=nil%>
-              <% else %>
-                <p>Pro Attorney User</p>
-                <% end %>
+                <p><%=user_name %></p>
             </div>
             <div class="pull-left info">
               <p></p>
-              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+              <a href="#"><i class="fa fa-circle text-success"></i>Online</a>
             </div>
           </div>
           <!-- search form -->
@@ -35,7 +32,6 @@
               </a>
             </li>
             <% if current_user.is_system_admin? %>
-            
             <li class="treeview">
               <%=link_to  admins_view_advocates_path  do %>
               <i class="fa fa-users"></i> <span>Advocates</span> <i class="fa fa-angle-left pull-right"></i>
@@ -56,99 +52,49 @@
 
             <% end %>
 
-            <% elsif current_user.is_client? %>
-            
-            <li class="treeview">
-              <%=link_to   cases_path   do %>
+            <% if current_user.is_client? %>
             <li class="treeview">
               <%= link_to cases_path do %>
-              <i class="fa fa-users"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+              <i class="fa-folder-open"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+              <% end %>
+            </li>
+            <li class="treeview">
+              <%= link_to new_case_path do %>
+              <i class="fa fa-files-o"></i> <span>New Case</span> <i class="fa fa-angle-left pull-right"></i>
               <% end %>
             </li>
 
              <li class="treeview">
               <%= link_to user_profiles_path(current_user.id) do %>
-               <i class="fa fa-users"></i> <span>Profile</span> <i class="fa fa-angle-left pull-right"></i>
+               <i class="fa fa-users"></i> <span>Profiles</span> <i class="fa fa-angle-left pull-right"></i>
               <% end %>
-            </li>
-            
-            <% else %>
-              <li class="treeview">
-              <a href="#">
-                <i class="fa fa-pie-chart"></i> 
-                <span></span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-            </li>
-            
+            </li>   
 
             <% end %>
 
-             <% if current_user != nil %>
-            <% if current_user.is_advocate? %>
+          
+           <li class="treeview">
+            <%=advocate_links %>
+           </li>
+
             <li class="treeview">
-              <%= link_to cases_path do %>
-              <i class="fa fa-users"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+              <% if current_user.user_profile!=nil %>
+              <%= link_to  edit_user_profile_path (current_user.user_profile)  do %>
+               <i class="fa fa-user"></i> <span>Edit Profile</span> <i class="fa fa-angle-left pull-right"></i>
+              <% end %>
               <% end %>
             </li>
 
-             <li class="treeview">
-              <%= link_to user_profiles_path(current_user.id) do %>
-               <i class="fa fa-users"></i> <span>Profile</span> <i class="fa fa-angle-left pull-right"></i>
+            <li class="treeview">
+              <%= link_to cases_path do %>
+              <i class="fa-folder-open"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
               <% end %>
-            </li>
           
 
            <li class="treeview">
-              <%= link_to 'Purchase' do %>
-               <i class="fa fa-users"></i> <span>Your Case</span> <i class="fa fa-angle-left pull-right"></i>
+              <%= link_to destroy_user_session_path,method: :delete do %>
+               <i class="fa fa-power-off"></i> <span>Logout</span> <i class="fa fa-angle-left pull-right"></i>
               <% end %>
             </li>
-            
-
-            <% else %>
-            <p>Pro attoreny</p>
-            <%end %>
-
-
-
-
-            
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-edit"></i> <span>Forms</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-share"></i> <span>Multilevel</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                <li>
-                  <a href="#"><i class="fa fa-circle-o"></i> Level One <i class="fa fa-angle-left pull-right"></i></a>
-                  <ul class="treeview-menu">
-                    <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-                    <li>
-                      <a href="#"><i class="fa fa-circle-o"></i> Level Two <i class="fa fa-angle-left pull-right"></i></a>
-                      <ul class="treeview-menu">
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-              </ul>
-            </li>
-            <li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span> 
-            <%= link_to "LOGOUT",destroy_user_session_path,method: :delete %></span></a></li>
-            <li class="header">LABELS</li>
-            <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
-          </ul>
         </section>
     </aside>
