--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -20,8 +20,7 @@
 						<b><u>Experience: </u></b><br><br><p><%= @user_profile.experience %></p></p>
 						<table>
 							<tr><td>Give your Ratings:</td><td>
-							<%= rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true,
-    																								  :half_show => true %>
+							<%= rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true, :half_show => true %>
 							</td></tr>
 							<tr><td>Average Ratings:</td>
 							<td><%= rating_for @user_profile, "ratings", disabled: true, imdb_avg: true %> </td>
@@ -49,11 +48,8 @@
 			&nbsp;&nbsp;
 			<%= link_to edit_user_profile_path(@user_profile), class: "btn btn-primary" do %>
 			<i class="fa fa-fw fa-edit"></i>
-
-			<% end if @user_profile.user.id==current_user.id %>
-
+			<%end if @user_profile.user.id==current_user.id%>
 			  <%= link_to 'Back',:back, class: "btn btn-primary" %>
-
 			<br>
 		</div>
 	</div><!--end box 2 -->
