--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -6,7 +6,7 @@
     <td><%= link_to case_path(user_case) do%><%= image_tag "detail.png", size: "20x40" ,class: "some class here",alt: "show" %>
     <% end %></td>
     <td><%= link_to edit_case_path(user_case) do%><%= image_tag "edit.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
-    <td><%= link_to user_case, method: :delete, data: { confirm: 'Are you sure?' } do %><%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Edit" %><%end%></td>
+    <td><%= link_to user_case, method: :delete, data: { confirm: 'Are you sure?' } do %><%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Delete" %><%end%></td>
 	<td><%= link_to "purchase" , case_cases_path(user_case)   %> </td>    
 
     </tr>
