--- a/app/views/admins/_user_case.html.erb
+++ b/app/views/admins/_user_case.html.erb
@@ -1,4 +1,7 @@
 <div id="user_case">
+<% if(@user_case==nil) %>
+<b> No Record Found </b>
+<% else %>
 <table class="table table-bordered table-hover dataTable">
 <thead>
 	<tr>
@@ -24,3 +27,4 @@
 </table>
 <%= will_paginate @user_case, renderer: BootstrapPagination::Rails, class: "pull-right" %>
 </div>
+<% end %>
