--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,4 +1,4 @@
-e<aside class="main-sidebar">
+<aside class="main-sidebar">
 <section class="sidebar">
           <!-- Sidebar user panel -->
           <div class="user-panel">
