--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -13,4 +13,6 @@
 		</tr>
 		<% end %>
 	</table>
+	<%= will_paginate @user_profile, renderer: BootstrapPagination::Rails, class: "pull-right" %>
+
 </p>
