--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,4 +1,7 @@
 <div class = "col-md-8">
+<div class = "row">
+<div class = "col-md-6">
+
   <h3>Case Detail</h3>
   <table class = "table table-bordered table-hover"> 
     <tr>
@@ -25,6 +28,10 @@
     </tr>
   <% end %>
   </table>
+    <%= link_to 'Back',:back, class: "btn btn-primary" %>
+
+</div>
+<div class = "col-md-6">
  <% if Payment.where(case_id: @user_case.id,user_id: current_user.id).any?  %>
 <h3>Client Detail</h3>
   <table class = "table table-bordered table-hover"> 
@@ -52,6 +59,8 @@
       <td>Pincode</td>
       <td><%= @user_case.user.user_profile.pincode %></td>
     </tr>
+      <% end %>
+
   </table>  
-  <% end %>
-  <%= link_to 'Back',:back, class: "btn btn-primary" %>
+</div>
+</div>
