--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>User Profiles</h1>	
 <p>
-	<table class="table table-striped table-bordered table-hover">
+	<table width="40%" class="table table-striped table-bordered table-hover" >
 		<tr>
 			<th>Name</th> <th colspan=3>Actions</th>
 		</tr>
