--- a/app/views/cases/purchase_case.html.erb
+++ b/app/views/cases/purchase_case.html.erb
@@ -1,23 +1,26 @@
-<h1>Purchased cases</h1>
-<table class="table table-striped">
+<div class = "box box-primary"><!--start box 1 -->
+  <div class="box-header with-border">
+  <h3 class="box-title custom-header">Purchased cases</h3>
+  </div>
+  <div class = "box-body">
+  <table class="table table-bordered table-striped">
 <thead>
     <tr>
       <th>Title</th>
       <th>Location</th>
       <th>Price</th>
       <th>Status</th>
-      <th colspan="1"></th>
     </tr>
   </thead>
 <% @payments.each do |payment| %>
   <tr>
     <td>
     	<%= link_to case_path(payment.case) do %>
-       <%= payment.case.case_title %></td>
+       <%= payment.case.case_title.titleize %></td>
        <% end %>
-    <td><%= payment.case.location%></td>
+    <td><%= payment.case.location.titleize %></td>
     <td><%= payment.case.case_type.amount %>$</td>
-    <td><%= payment.case.status%></td>
+    <td><%= payment.case.status.titleize %></td>
     <% if current_user.id == payment.case.user_id %>
     <td><%= link_to "",payment.case_path(payment.case),class: "fa fa-fw fa-eye", title: "view" %>
     </td>
@@ -29,3 +32,7 @@
     
 <% end %>
 </table>
+</div>
+<%= will_paginate @payments, renderer: BootstrapPagination::Rails, class: "pull-right" %>
+</div>
+
