--- a/app/views/admins/_users.html.erb
+++ b/app/views/admins/_users.html.erb
@@ -2,6 +2,14 @@
 <% if(!@users.any?) %>
 <b> No Record Found </b>
 <% else %>
+<div class="box box-primary">
+	<div class="box-header with-border">
+	<h3 class="box-title custom-header"><%= @users.first.role.title.titleize %>s</h3>
+	</div>
+
+	<div class="box-body">
+
+
 <table class="table table-bordered table-hover dataTable">
 	<thead>
 		<tr>
@@ -16,9 +24,11 @@
 			<tr>
 				<td><%= index+1 %></td>
 				<td>
+			    <% if user.user_profile.present? %>
 				<%=link_to user_profile_path(user.user_profile) do%>
 				<%= user.user_profile.first_name.capitalize+" "+user.user_profile.last_name.capitalize %>
 				<%end %>
+				<% end %>
 				</td>
 				<td><%= user.email %></td>
 			    <td><%= active_user?(user)%></td>
@@ -26,6 +36,8 @@
 		<% end %>
 	</tbody>
 </table>
+</div>
+</div>
 <%= will_paginate @users, renderer: BootstrapPagination::Rails,class: "pull-right" %>
 <% end %>
 </div>
