--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -3,7 +3,7 @@
   <div class = "col-md-6">
     <div class = "box box-primary"><!--start box 1 -->
       <div class = "box-header with-border">
-        <h3 class = "box-title">Case Info</h3><br>
+        <h3 class = "box-title custom-header">Case Info</h3><br>
       </div>
       <div class = "box-body">
         <div class = "col-md-12">
@@ -22,15 +22,23 @@
             <%= f.label :Case_detail %>
             <%= f.text_area :case_detail,class: "form-control",placeholder: "Enter Case detail" %>
           </div>
+             <div class = "form-group">
+            <%= f.label :Budget %>
+            <%= f.text_field :location,class: "form-control",placeholder: "Enter Case Location" %>
+          </div> 
         </div>
       </div>
+
     </div>
+
+       <%= f.submit class: "btn btn-primary" %>    
   </div><!--end box 1 -->
+
     
   <div class = "col-md-6">
     <div class = "box box-primary"><!--start box 2 -->
       <div class = "box-header with-border">
-        <h3 class = "box-title">Case Info</h3><br>
+        <h3 class = "box-title custom-header">Case Info</h3><br>
       </div>
       <div class = "box-body">
         <div class = "col-md-12">
@@ -57,10 +65,13 @@
             <%= f.label :document %>
             <%= file_field_tag "document[]", type: :file, multiple: true %>
           </div>
+
+        
+  
+
         </div>
       </div>
       </div>
-      <%= f.submit class: "btn btn-primary" %>    
     </div>
   </div>
 <% end %>
