--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -243,8 +243,7 @@
               <!-- Control Sidebar Toggle Button -->
               <li>
                  <%= link_to destroy_user_session_path,method: :delete do %>
-                <i class="fa fa-power-off"></i>
-              <% end %>
+                <i class="fa fa-sign-out" style="font-size:24px"></i>                 <% end %>
               </li>
             </ul>
           </div>
