--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,39 +3,32 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <%= avatar_display({class: "user-image"}) %>
+              <%= avatar_display({class: "user-image img-circle"}) %>
             </div>
             <div class="pull-left info">
                 <p><%=user_name %></p>
-            </div>
-            <div class="pull-left info">
-              <p></p>
-              <a href="#"><%= current_user.role.title %></a>
+                <a href="#"><i class="fa fa-circle text-success"></i>Online</a>
             </div>
           </div>
+          <br><br>
           <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
-              </a>
-            </li>
+            
             <% if current_user.is_system_admin? %>
             <li class="treeview">
               <%=link_to  admins_view_advocates_path  do %>
-              <i class="fa fa-users"></i> <span>Advocates</span> <i class="fa fa-angle-left pull-right"></i>
+              <i class="fa fa-users"></i> <span>Advocates</span> <i class="fa fa-angle"></i>
                <% end %>
             </li>
 
           <li class="treeview">
               <%=link_to  admins_view_clients_path  do %>
-              <i class="fa fa-users"></i> <span>clients</span> <i class="fa fa-angle-left pull-right"></i>
+              <i class="fa fa-users"></i> <span>clients</span> <i class="fa fa-angle"></i>
                <% end %>
             </li>
 
             <li class="treeview">
               <%=link_to  admins_view_cases_path  do %>
-                <i class="fa fa-book"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-fw fa-files-o"></i> <span>Cases</span> <i class="fa fa-angle"></i>
                <% end %>
             </li>
 
@@ -44,13 +37,13 @@
             <% if current_user.is_client? %>
             <li class="treeview">
               <%= link_to new_case_path do %>
-              <i class="fa fa-files-o"></i> <span>New Case</span> <i class="fa fa-angle-left pull-right"></i>
+              <i class="fa fa-file-text-o"></i> <span>New Case</span> <i class="fa fa-angle"></i>
               <% end %>
             </li>
 
              <li class="treeview">
               <%= link_to user_profiles_path do %>
-               <i class="fa fa-users"></i> <span>Profiles</span> <i class="fa fa-angle-left pull-right"></i>
+               <i class="fa fa-users"></i> <span>Advocates</span> <i class="fa fa-angle"></i>
               <% end %>
             </li>   
 
@@ -62,24 +55,44 @@
            </li>
 
             <li class="treeview">
-              <% if current_user.user_profile!=nil %>
-              <%= link_to  edit_user_profile_path (current_user.user_profile)  do %>
-               <i class="fa fa-user"></i> <span>Edit Profile</span> <i class="fa fa-angle-left pull-right"></i>
-              <% end %>
-              <% end %>
-            </li>
-
-            <li class="treeview">
             <% if current_user.is_advocate? || current_user.is_client? %>
               <%= link_to cases_path do %>
-              <i class="fa-folder-open"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
+              <i class="fa fa-fw fa-files-o"></i> <span>Cases</span> <i class="fa fa-angle"></i>
               <% end %>
           <% end %>
 
+
+          <li class="treeview">
+               <%= link_to user_profile_path(current_user.id) do %>
+               <i class="fa fa-user"></i> <span>Profiles</span> <i class="fa fa-angle-left pull-right"></i>
+               <%end%>
+
+          <ul class="treeview-menu menu-open" style="display: block;">
+
+           <li>
+              <%= link_to user_profile_path(current_user.id) do %>
+               <i class="fa fa-circle-o"></i> <span>My Profile</span> <i class="fa fa-angle"></i>
+              <% end %>
+            </li>
+
+           <li>
+              <% if current_user.user_profile!=nil %>
+              <%= link_to  edit_user_profile_path (current_user.user_profile)  do %>
+               <i class="fa fa-circle-o"></i> <span>Edit Profile</span> <i class="fa fa-angle"></i>
+              <% end %>
+              <% end %>
+            </li>
+
+          </ul>   
+
+
+
+
            <li class="treeview">
               <%= link_to destroy_user_session_path,method: :delete do %>
-               <i class="fa fa-power-off"></i> <span>Logout</span> <i class="fa fa-angle-left pull-right"></i>
+               <i class="fa fa-sign-out"></i><span>Logout</span>
               <% end %>
             </li>
         </section>
+      </ul>
     </aside>
