--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -1,18 +1,27 @@
-<h1>User Profiles</h1>	
-<p>
+<div class="box box-primary">
+	<div class="box-header with-border">
+		<h3 class="box-title custom-header">Advocates</h3>
+	</div>
+<div class="box-body">
 	<table class="table table-striped table-bordered table-hover">
+		<tr><th>Name</th></tr>
+		<% @user_profile.each do |user_profile|  %>
 		<tr>
-			<th>Name</th> <th colspan=3>Actions</th>
+			<td> <%=link_to user_profile_path(user_profile) do%>
+				<%= user_profile.first_name.titleize + " " + user_profile.last_name.titleize %>
+			<%end %></td>
+			<% if user_profile.user.id==current_user.id %>
+				<td>
+					<%= link_to edit_user_profile_path(user_profile), class: "fa fa-fw fa-pencil-square-o", title: "Edit" do %><% end %>
+				</td>
+				<td>
+					<%= link_to "", method: :delete, data: {confirm: 'are you sure? '}, class: "fa fa-fw fa-trash", title: "delete" do %><% end %>
+				</td>
+			<% end %>
 		</tr>
-		<% @user_profile.each do |up|  %>
-		<tr>
-			<td><%= up.first_name.titleize + " " + up.last_name.titleize %></td>
-			<td><%= link_to user_profile_path(up), class: "fa fa-fw fa-eye", title: "view" do %><% end %></td>
-			<td><%= link_to edit_user_profile_path(up), class: "fa fa-fw fa-pencil-square-o", title: "Edit" do %><% end  if up.user.id==current_user.id %></td>
-			<td><%= link_to up, method: :delete, data: {confirm: 'are you sure? '}, class: "fa fa-fw fa-trash", title: "delete" do %><% end if up.user.id==current_user.id  %></td>
-		</tr>
-		<% end %>
+		<%end%>
 	</table>
+</div>
+</div>
 	<%= will_paginate @user_profile, renderer: BootstrapPagination::Rails, class: "pull-right" %>
 
-</p>
