complete flow with improved design

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,20 +6,6 @@
     text-align: left;
  }
 
-.alert-alert {
-    background-color: #f2dede;
-    border-color: #eed3d7;
-    color: #b94a48;
-    text-align: left;
- }
-
-.alert-notice {
-    background-color: #dff0d8;
-    border-color: #d6e9c6;
-    color: #468847;
-    text-align: left;
- }
-
  .alert-success {
     background-color: #dff0d8;
     border-color: #d6e9c6;
@@ -28,4 +14,14 @@
 
 .custom-header{
     font-size: 23px !important;
+}
+
+ .alert-notice {
+    color:#dff0d8;background-color:#3c763d;border-color:#d6e9c6;
+ }
+
+ .alert-alert {
+    background-color: #A94442;
+    border-color: #ebccd1;
+    color: #dff0d8;
 }
