--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,7 +3,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <%= avatar_display({class: "user-image img-circle"}) %>
+              <%= avatar_display({class: "img-circle"}) %>
             </div>
             <div class="pull-left info">
                 <p><%=user_name %></p>
