--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -54,9 +54,9 @@
 
 <% if Payment.where(case_id: @user_case.id,user_id: current_user.id).any?  %>
   <div class="box box-primary">
-    <h3>
-      <div class="box-header with-border">Client Detail</div>
-    </h3>
+    <div class="box-header with-border">
+      <h3 class="box-title custom-header">Client Details</h3>
+    </div>
     <div class="box-body">
   <ul class="todo-list ui-sortable">
   <li>
