--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -22,12 +22,15 @@
 						<%= @user_profile.user.role.title %>
 						</div>
 						
-						<p>
-						<b><u>Experience: </u></b><p><%= @user_profile.experience %></p></p>
+						<% if @user_profile.user.is_advocate? %>	
+						<p> <b><u>Experience: </u></b><%= @user_profile.experience %></p>
+						<% end %>
 						<table>
+							<% unless current_user.user_profile.id == @user_profile.id  %>	
 							<tr><td>Give your Ratings:</td><td>
-							<%= (rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true, :half_show => true) unless @user_profile.user_id == current_user.id %>
+							<%= (rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true, :half_show => true) %>
 							</td></tr>
+							<% end %>
 							<tr><td>Average Ratings:</td>
 							<td><%= rating_for @user_profile, "ratings", disabled: true, imdb_avg: true %> </td>
 							</tr>
