some change in theme

--- a/app/views/admins/_user_case.html.erb
+++ b/app/views/admins/_user_case.html.erb
@@ -1,5 +1,5 @@
 <div id="user_case">
-<% if(@user_case==nil) %>
+<% if(!@user_case.any?) %>
 <b> No Record Found </b>
 <% else %>
 <div class="box box-primary">
