Cases view design changes and fixes

--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -31,7 +31,7 @@
 
     </div>
 
-       <%= f.submit class: "btn btn-primary" %>    
+       <%= f.submit submit_value(@user_case),class: "btn btn-primary" %>    
   </div><!--end box 1 -->
 
     
