--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div> <!--end box 1 -->
-       <%=f.submit class: "btn btn-primary" %>
+       <%=f.submit submit_value(@user_profile),class: "btn btn-primary" %>
     </div>
     <div class="col-md-6">
       <div class="box box-primary"><!--start box 2 -->
