--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -22,7 +22,7 @@
 
           <li class="treeview">
               <%=link_to  admins_view_clients_path  do %>
-              <i class="fa fa-users"></i> <span>clients</span> <i class="fa fa-angle"></i>
+              <i class="fa fa-users"></i> <span>Clients</span> <i class="fa fa-angle"></i>
                <% end %>
             </li>
 
