--- a/app/views/admins/_user_case.html.erb
+++ b/app/views/admins/_user_case.html.erb
@@ -1,12 +1,25 @@
 <div id="user_case">
-<% if(!@user_case.any?) %>
+
+<div class="box box-primary">
+	<div class="box-header with-border">
+		<h3 class="box-title custom-header">Cases</h3>
+		<span class="label label-primary"><%= Case.count %></span>
+		<ul class="nav nav-tabs pull-right">
+			<li class="active">
+				<%= link_to "All", admins_view_cases_path %>
+			</li>
+			<li>
+				<%= link_to "open", admins_view_cases_path(status: "open")%>
+			</li>
+			<li>
+				<%= link_to "closed", admins_view_cases_path(status: "closed")%>
+			</li>
+		</ul>
+	</div>
+<div class="box-body">
+	<% if(!@user_case.any?) %>
 <b> No Record Found </b>
 <% else %>
-<div class="box box-primary">
-<div class="box-header with-border">
-<h3 class="box-title custom-header">Cases</h3>
-</div>
-<div class="box-body">
 <table class="table table-bordered table-hover dataTable">
 <thead>
 	<tr>
