--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -22,10 +22,6 @@
             <%= f.label :Case_detail %>
             <%= f.text_area :case_detail,class: "form-control",placeholder: "Enter Case detail" %>
           </div>
-             <div class = "form-group">
-            <%= f.label :Budget %>
-            <%= f.text_field :location,class: "form-control",placeholder: "Enter Case Location" %>
-          </div> 
         </div>
       </div>
 
@@ -54,7 +50,7 @@
           </div>
     
           <div class = "form-group">
-            <%= f.label :documents_atteched %>    
+            <%= f.label :documents_atteched %><br>    
             <% @documents.each do |document| %>
               <%= document.doc_file_name %>
               <%= link_to "Delete", document_cases_path(document), method: :delete, data: { confirm: 'Are you sure?' }  %><br>
