--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -44,7 +44,16 @@
       </li>
 
       <li>
+        <% unless @user_case.id == current_user.id %>
+        <span class='handle ui-sortable-handle'><i class='fa fa-fw fa-paperclip fa-lg'></i></span>
+        <span class="text">Attachments</span><br><% @user_case.documents.each do |document| %>
+              <%= document.doc_file_name %>
+              <%= link_to "Delete", document_cases_path(document), method: :delete, data: { confirm: 'Are you sure?' }  %><br>
+            <% end %></span>
+        <%else%>
         <span class="text"><%= show_documents %></span>
+
+        <%end%>
       </li>
   <% end %>
   
@@ -103,9 +112,9 @@
     
       <% end %>
 
-
+      <%= link_to 'Back',:back, class: "btn btn-primary" %>
   </div>
 </div>
-<%= link_to 'Back',:back, class: "btn btn-primary" %>
+
 </div>
 </div>
