--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -14,6 +14,9 @@
                 <% end %> 
                 <%=link_to user_profile_path(user_profile) do%>
 				<%= user_profile.first_name.titleize + " " + user_profile.last_name.titleize %>
+				<div class= "pull-right" >
+				<%= rating_for user_profile, "ratings", disabled: true, imdb_avg: true%>
+			</div>
 			<%end %></td>
 			<% if user_profile.user.id==current_user.id %>
 				<td>
