--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -1,3 +1,4 @@
+<% if @user_profile.user_id == current_user.id %>
 <%= form_for @user_profile, role: "form", html: { :multipart => true } do |f| %>
   <div class = "row">
     <div class = "col-md-6">
@@ -83,6 +84,9 @@
     </div>
   <% end %>
 </div>
+<% else %>
+<h3>you are not allowed to view this page</h3>
+<% end %>
 <script type="text/javascript">
  var loadFile = function(event) {
     var reader = new FileReader();
