--- a/app/views/cases/_search_form.html.erb
+++ b/app/views/cases/_search_form.html.erb
@@ -1,3 +1,23 @@
+<table>
+  <tr>
+    <%= form_tag("cases", method: "get") do %>
+      <td> 
+          <%= "Case Type" %> 
+      </td>
+      
+
+          <td><%= select_tag :case_type_id,options_from_collection_for_select(CaseType.all,    :id, :case_type,selected_case_type),class: "form-control pull-right",style: "width:100px"%>
+          </td>
+          
+      <td>
+          <%= submit_tag("Search") %>
+      </td>
+  </tr>
+
+    <% end %>
+</table>
+
+
 <%= form_tag(cases_path, method: :get, class: "navbar-form", role: 'search', id: "search-form") do %>
 <div class="form-group pull-right">
 	<div class="input-group">
