Cases Filter With ajax

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -66,22 +66,24 @@
                <a><i class="fa fa-user"></i> <span>Profiles</span> <i class="fa fa-angle-left pull-right"></i>
                </a>
                   <% if current_user.user_profile!=nil %>
-
-
-           <ul class="treeview-menu menu">
+           
+          
+           <ul class="treeview-menu">
+            <li class="treeview">
               <%= link_to user_profile_path(current_user.user_profile.id) do %>
                <i class="fa fa-circle-o"></i> <span>My Profile</span> <i class="fa fa-angle"></i>
               <% end %>
-            </ul>
+              <li>
+            
 
-           <ul class="treeview-menu menu">
+           <li class="treeview">
               <%= link_to  edit_user_profile_path (current_user.user_profile.id)  do %>
                <i class="fa fa-circle-o"></i> <span>Edit Profile</span> <i class="fa fa-angle"></i>
               <% end %>
           <% end %>
-            </ul>
+            </li>
 
-          </li>   
+          </ul>  
 
 
 
