--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -1,3 +1,4 @@
+<div id="user_case">
 <% @user_case.each do |user_case| %>
 <div class = "box box-primary"><!--start box 2 -->
   <div class = "box-header with-border ">
@@ -28,3 +29,4 @@
   </div>
 </div><br>
 <% end %>
+</div>
