--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
 	<div class="col-md-6">
-		<h2>Cases</h2>
+		<h2 style="display:inline">Cases</h2>
+		<%= select_tag :case_type_id,options_from_collection_for_select(CaseType.all, :id, :case_type,
+            default_case_type(Case.first)),{class: "pull-right",id: "type"} %>
+		
 		</div><div class="col-md-6">
 			<%= render partial: "search_form" %>
 		</div>
@@ -13,3 +16,11 @@
 			<% end %><br>
 	</div>
 </div>
+<script type="text/javascript">
+$('#type').change(function() {
+  $.ajax({ type: "GET",   
+           url: "<%= cases_path %>",
+           data: {case_type: $('#type option:selected').text()},
+  });
+});
+</script>
