case search and case_type filter working togather fix

--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -15,12 +15,12 @@
           </div>
 
           <div class = "form-group">
-            <%= f.label :Case_Title %><font color="red" class="pull-right">*</font>
+            <%= f.label :Case_Title %><font color="red">*</font>
             <%= f.text_field :case_title,class: "form-control",placeholder: "Enter Case title" %>
           </div>
 
           <div class = "form-group">
-            <%= f.label :Case_detail %><font color="red" class="pull-right">*</font>
+            <%= f.label :Case_detail %><font color="red">*</font>
             <%= f.text_area :case_detail,class: "form-control",placeholder: "Enter Case detail" %>
           </div>
         </div>
@@ -41,7 +41,7 @@
         <div class = "col-md-12">
 
           <div class = "form-group">
-            <%= f.label :location %><font color="red" class="pull-right">*</font>
+            <%= f.label :location %><font color="red">*</font>
             <%= f.text_field :location,class: "form-control",placeholder: "Enter Case Location" %>
           </div> 
   
