--- a/app/views/cases/_search_form.html.erb
+++ b/app/views/cases/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(cases_path, method: :get, class: "navbar-form", role: 'search', id: "search-form") do %>
+<%= form_tag(cases_path, method: :get,remote: true, class: "navbar-form", role: 'search', id: "search-form") do %>
 <div class="form-group pull-right">
 	<div class="input-group">
 		<%= text_field_tag 'search', nil, class: "form-control", placeholder: "search cases",title: "Enter to search" %>
