--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,8 +1,11 @@
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-3">
 		<h2 style="display:inline">Cases</h2>
+	</div>
+	<div class="col-md-3">
+
 		<%= select_tag :case_type_id,options_from_collection_for_select(CaseType.all, :id, :case_type,
-            default_case_type(Case.first)),{class: "pull-right",id: "type"} %>
+            default_case_type(Case.first)),{class: "form-control",id: "type"} %>
 		
 		</div><div class="col-md-6">
 			<%= render partial: "search_form" %>
