--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -9,12 +9,12 @@
         <div class = "box-body">
           <div class = "col-md-12">
             <div class = "form-group">
-              <%= f.label :first_name%><font color="red" class="pull-right">*</font>
+              <%= f.label :first_name%><font color="red">*</font>
               <%= f.text_field :first_name, class: "form-control ", id: "exampleInputEmail1", placeholder: "Enter first name"%>
             </div>
 
             <div class = "form-group">
-              <%= f.label :last_name %><font color="red" class="pull-right">*</font>  
+              <%= f.label :last_name %><font color="red">*</font>  
               <%= f.text_field :last_name, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter last name"%>
             </div>
 
@@ -59,12 +59,12 @@
         <div class="box-body">
           <div class="col-md-12">
             <div class = "form-group">
-              <%= f.label :address %><font color="red" class="pull-right">*</font>  
+              <%= f.label :address %><font color="red">*</font>  
               <%= f.text_area :address, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter address" %>
             </div>
 
-            <div class = "form-group"><font color="red" class="pull-right">*</font>  
-              <%= f.label :city %>
+            <div class = "form-group">  
+              <%= f.label :city %><font color="red">*</font>
               <%= f.text_field :city, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter city" %>
             </div>
 
